crates/python_parser/src/snapshots/python_parser__lexer__tests__escape_unicode_name.snap
---
source: crates/python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        String(
            "\\N{EN SPACE}",
        ),
        0..14,
        TokenFlags(
            DOUBLE_QUOTES,
        ),
    ),
    (
        Newline,
        14..14,
    ),
]
```
