crates/python_parser/src/snapshots/python_parser__lexer__tests__fstring_escape.snap
---
source: crates/python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart,
        0..2,
    ),
    (
        FStringMiddle {
            value: "\\",
            is_raw: false,
        },
        2..3,
    ),
    (
        Lbrace,
        3..4,
    ),
    (
        Name {
            name: "x",
        },
        4..5,
    ),
    (
        Colon,
        5..6,
    ),
    (
        FStringMiddle {
            value: "\\\"\\",
            is_raw: false,
        },
        6..9,
    ),
    (
        Lbrace,
        9..10,
    ),
    (
        Name {
            name: "x",
        },
        10..11,
    ),
    (
        Rbrace,
        11..12,
    ),
    (
        Rbrace,
        12..13,
    ),
    (
        FStringMiddle {
            value: " \\\"\\\"\\\n end",
            is_raw: false,
        },
        13..24,
    ),
    (
        FStringEnd,
        24..25,
    ),
    (
        Newline,
        25..25,
    ),
]
