crates/python_parser/src/snapshots/python_parser__lexer__tests__fstring_escape_braces.snap
---
source: crates/python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart,
        0..2,
    ),
    (
        FStringMiddle {
            value: "\\",
            is_raw: false,
        },
        2..3,
    ),
    (
        Lbrace,
        3..4,
    ),
    (
        Name {
            name: "foo",
        },
        4..7,
    ),
    (
        Rbrace,
        7..8,
    ),
    (
        FStringEnd,
        8..9,
    ),
    (
        FStringStart,
        10..12,
    ),
    (
        FStringMiddle {
            value: "\\\\",
            is_raw: false,
        },
        12..14,
    ),
    (
        Lbrace,
        14..15,
    ),
    (
        Name {
            name: "foo",
        },
        15..18,
    ),
    (
        Rbrace,
        18..19,
    ),
    (
        FStringEnd,
        19..20,
    ),
    (
        FStringStart,
        21..23,
    ),
    (
        FStringMiddle {
            value: "\\{foo}",
            is_raw: false,
        },
        23..31,
    ),
    (
        FStringEnd,
        31..32,
    ),
    (
        FStringStart,
        33..35,
    ),
    (
        FStringMiddle {
            value: "\\\\{foo}",
            is_raw: false,
        },
        35..44,
    ),
    (
        FStringEnd,
        44..45,
    ),
    (
        Newline,
        45..45,
    ),
]
