crates/python_parser/src/snapshots/python_parser__lexer__tests__fstring_escape_raw.snap
---
source: crates/python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..3,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE,
        ),
    ),
    (
        FStringMiddle(
            "\\",
        ),
        3..4,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE,
        ),
    ),
    (
        Lbrace,
        4..5,
    ),
    (
        Name(
            Name("x"),
        ),
        5..6,
    ),
    (
        Colon,
        6..7,
    ),
    (
        FStringMiddle(
            "\\\"\\",
        ),
        7..10,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE,
        ),
    ),
    (
        Lbrace,
        10..11,
    ),
    (
        Name(
            Name("x"),
        ),
        11..12,
    ),
    (
        Rbrace,
        12..13,
    ),
    (
        Rbrace,
        13..14,
    ),
    (
        FStringMiddle(
            " \\\"\\\"\\\n end",
        ),
        14..25,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE,
        ),
    ),
    (
        FStringEnd,
        25..26,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE,
        ),
    ),
    (
        Newline,
        26..26,
    ),
]
```
